TestXMLIO: Improve exception-instance testing.
Using JUnit's assertInstanceOf() and our assertAny() instead of assertTrue() and
'instanceof' and chains of || conditions.